--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
   height: 55px;
   z-index: 1;
   left: 2px;
-  top: 1032px;
+  margin-top: 1032px;
   background: -webkit-linear-gradient(top, rgba(2,46,73,0) 0%,rgba(2,46,73,0.59) 25%,rgba(1,14,22,1) 85%,rgba(0,0,0,1) 100%);
 }
 
