HTML Structure update across all apps for Settings and minimized z-indexing and absolute positioning - Many CSS z-indexing, sizing and absolute positioning properties commented out (not removed) - Updates HomeScreen HTML and CSS to work with updated Settings Panel - Updates Dashboard HTML and CSS to work with Settings Panel - Updates Google Nav HTML and CSS to include updated Settings Panel - Updates HVAC HTML and CSS to work with updated Settings Panel - Updates NFC HTML and CSS to work with updated Settings Panel - Updates to HVAC, Homescreen, Dashboard, and Nav after 12/18 AM merge - Updates HTML and CSS of MOST to work with Settings Panel - Updates Browser HTML and CSS to work with updated Settings Panel - Comments out old #settingsMenu from bottomBar - Updates News HTML and CSS to work with updated Settings Panel - Updates Phone HTML and CSS to work with updated Settings Panel - Fixed RVI item on Settings page - Fixed typo in Settings.html - Removes #settingsPage div from index.html across all apps - Resets settings JS back to original method of appending #settingsPage - Merges weather with this patch
Change-Id: I3320f695f017601bd745f9f984e05407d7aa3a11

--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,9 @@ body {
   display: inline-block;
   margin-top: 96px;
   height: 100px;
+  /* line-height: 47px !important; */
   width: 100%;
-  z-index: -500;
+  /*z-index: -500;*/
   text-align: center;
   padding-top: 5px;
 }
@@ -24,19 +25,19 @@ body {
 
 #topArticleList {
   visibility: visible;
-  z-index: -800;
+  /*z-index: -800;*/
   overflow: hidden;
 }
 
 #entertainArticleList {
   visibility: hidden;
-  z-index: -530;
+  /*z-index: -530;*/
   overflow: hidden;
 }
 
 #sportsArticleList {
   visibility: hidden;
-  z-index: -550;
+  /*z-index: -550;*/
   overflow: hidden;
 }
 
@@ -80,15 +81,18 @@ body {
 }
 
 .article {
-  position: absolute;
-  top: 281px;
-  left: 0px;
-  width: 1078px;
+  flex: 1;
+  /*position: absolute;*/
+  /*top: 225px;*/
+  /*left: 0px;*/
+  /* height: 870px; */
+  /*width: 1078px;*/
   border: 1px solid #fff;
-  z-index: 5;
+  /* outline: 18px solid black; */
+  /*z-index: 5;*/
   background: #000000;
   overflow: hidden;     
-  bottom: 131px;     
+  /*bottom: 131px;     */
 }
 
 #articleClose {
@@ -161,9 +165,9 @@ body {
 .articleListGradFade {
   width: 1076px;
   height: 80px;
-  z-index: 1;
+  /*z-index: 1;*/
   left: 2px;
-  bottom: 132px;
+  bottom: 0;
   background: -webkit-linear-gradient(top, rgba(2,46,73,0) 0%,rgba(2,46,73,0.59) 25%,rgba(1,14,22,1) 85%,rgba(0,0,0,1) 100%);
   position: absolute;
 }
@@ -208,8 +212,4 @@ li {
 .wrapper {
   height: 1673px;
   width: 100%;
-}
-
-.borderLtBlue_DNA {
-  border-color: #B2F0FF;
 }
