Overrides list margin in settings
Change-Id: Ic2bf6cab2c6b0ff986f4e34aa4b3b2f9ae54f453

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,12 @@
   z-index: 1005 !important;
 }
 
+.settingElement {
+  margin: 0 40px; 
+}
+
+/* End overrides */
+
 body {
   overflow: hidden;
 }
