--- a/css/news.css
+++ b/css/news.css
@@ -15,7 +15,8 @@ a {
 	text-decoration: none;
 }
 
-.newsChannels {
+.news-categories {
+	background-color: rgba(68, 68, 68, .6);
 	z-index: 0;
 	position: relative;
 	display: inline-block;
@@ -112,13 +113,12 @@ ul#articleScroller {
 }
 
 .articleList {
+	border: 2px solid #B2F0FF;
 	position: relative;
 	display: inline-block;
 	top: 5px;
 	left: 0px;
-	width: 1080;
-	border-style: solid;
-	border-width: 2px;
+	width: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
@@ -131,10 +131,6 @@ ul#articleScroller {
 	height: 187px;
 	margin: 10px 10px 0 10px;
 	line-height: 1.4;
-}
-
-.textBgColorThemeTransparent_DNA {
-	background-color: rgb(68, 68, 68);
 }
 
 .itemDate {
@@ -154,7 +150,7 @@ ul#articleScroller {
 .article {
 	z-index: -4;
 	position: absolute;
-	top: 197px;
+	top: 192px;
 	left: 0px;
 	width: 1080px;
 	background: #000000;
@@ -169,13 +165,6 @@ ul#articleScroller {
 	text-transform: uppercase;
 	margin-top: 2%;
 	margin-bottom: 1%;
-}
-
-.articlePhoto {
-	display: block;
-	text-align: center;
-	border: 4px solid #333333;
-	margin: 10px 0px 10px 0px;
 }
 
 .articleBody {
