DNA_News: 1. Reformatted full view for article reading 2. Removed outdated styles
Change-Id: Ib387944946da65b1f21a87a7a8faaf2c0b8663d8

--- a/css/news.css
+++ b/css/news.css
@@ -158,6 +158,11 @@ ul#articleScroller {
 	bottom: -1px;
 }
 
+.articlePhoto {
+	margin: 20px 38px 20px 0px;
+	float: left;
+}
+
 .articleHead {
 	display: block;
 	padding: -8px;
@@ -170,7 +175,7 @@ ul#articleScroller {
 .articleBody {
 	display: block;
 	padding: 22px 31px 31px 31px;
-	line-height: 120%;
+	line-height: 1.4;
 }
 
 .thumbnail {
