--- a/css/news.css
+++ b/css/news.css
@@ -2,72 +2,78 @@ a {
   text-decoration: none;
 }
 
-.feed-channels {
-  font-size: 5.4rem;
-  position: relative;
+#feed-channels {
+  background-color: rgba(68, 68, 68, .6);
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  font-size: 5.4rem;
   height: 100px;
   margin-top: 5px;
   padding-top: 18px;
+  position: relative;
+  justify-content: space-around;
   text-align: center;
-  background-color: rgba(68, 68, 68, .6);
+  width: 100%;
+}
+
+.channel-button {
+  flex: 1;
+  font-size: 4.5rem;
+  color: #ffd38c;
 }
 
 .newsTopics li {
-  font-size: 4.8rem;
   display: inline;
-  padding-right: 53px;
   list-style-type: none;
+  padding-right: 53px;
+  font-size: 4.8rem;
 }
 
 .article-list ul {
+  list-style-type: none;
   margin: 0 10px 0 20px;
   padding: 0;
-  list-style-type: none;
 }
 
 .article-list li {
+  border-bottom: 1px solid rgba(255,255,255,.25);
   font-weight: 300;
-  position: relative;
-  overflow: hidden;
   margin: 0;
+  overflow: hidden;
   padding: 20px;
-  border-bottom: 1 px solid rgba(255, 255, 255, .25);
+  position: relative;
 }
 
 /*articleScroller class is created dynamically by main.js*/
-
 #articleScroller li {
-  position: relative;
   overflow: hidden;
+  position: relative;
   margin: 0;
   padding: 0;
 }
 
 ul#articleScroller {
-  margin: 0;
-  padding: 0;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 #feed-lists {
   flex: 1;
+  position: relative;
 }
 
 .articleListItem {
-  line-height: 1.4;
+  background-color: rgba(68, 68, 68, .6);
   display: block;
   width: 1056px;
   height: 187px;
   margin: 10px 10px 0 10px;
-  background-color: rgba(68, 68, 68, .6);
+  line-height: 1.4;
 }
 
 .itemDate {
-  font-size: 2.6rem;
   text-transform: uppercase;
+  font-size: 2.6rem;
 }
 
 .itemSubHead {
@@ -76,31 +82,31 @@ ul#articleScroller {
 
 .itemDesc {
   font-size: 2rem;
-  color: #fff;
+  color: #FFF;
 }
 
 .article {
-  background: #000;
+  background: #000000;
 }
 
 .articlePhoto {
+  margin: 20px 38px 20px 0px;
   float: left;
-  margin: 20px 38px 20px 0;
 }
 
 .articleHead {
   display: block;
-  margin-top: 2%;
-  margin-bottom: 1%;
   padding: -8px;
   vertical-align: middle;
   text-transform: uppercase;
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
 
 .articleBody {
-  line-height: 1.4;
   display: block;
   padding: 22px 31px 31px 31px;
+  line-height: 1.4;
 }
 
 .thumbnail {
@@ -112,46 +118,45 @@ ul#articleScroller {
 }
 
 .itemText {
-  font-size: 1.5rem;
   display: inline-block;
-  overflow: hidden;
   width: 750px;
   height: 168px;
   padding: 3px 3px 3px 12px;
   vertical-align: middle;
+  overflow: hidden;
+  font-size: 1.5rem;
 }
 
 .itemTitle {
+  color: #B2F0FF;
   font-size: 2.6rem;
-  color: #b2f0ff;
 }
 
 .itemTextGradFade {
   z-index: -6;
-  bottom: 36px;
-  left: 195px;
   display: block;
   width: 490px;
   height: 35px;
+  left: 195px;
+  bottom: 36px;
 }
 
 .articleListGradFade {
-  position: absolute;
   z-index: 0;
-  bottom: 0;
-  left: 2px;
-  width: 1080px;
+  width: 100%;
   height: 80px;
+  bottom: 0;
   background: -webkit-linear-gradient(top, rgba(0,0,0,0) 3%,rgba(0,0,0,1) 100%);
+  position: absolute;
 }
 
 .scrollIndicator {
   display: block;
-  width: 52px;
+  width:52px;
   height: 32px;
-  margin-top: 20px;
-  margin-right: 50%;
   margin-left: 50%;
+  margin-right: 50%;
+  margin-top: 20px;
 }
 
 #bbar-logo {
